css/main.css
/*! HTML5 Boilerplate v6.1.0 | MIT License | https://html5boilerplate.com/ */

/*
 * What follows is the result of much research on cross-browser styling.
 * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
 * Kroc Camen, and the H5BP dev community and team.
 */

/* ==========================================================================
   Base styles: opinionated defaults
   ========================================================================== */
@import url(https://fonts.googleapis.com/css?family=Catamaran);
@import url(https://fonts.googleapis.com/css?family=Assistant:200);

html {
    color: #474747;
    font-size: 1em;
    line-height: 1.4;
    font-family: "Futura", Arial, sans-serif;
}

/*
 * Remove text-shadow in selection highlight:
 * https://twitter.com/miketaylr/status/12228805301
 *
 * Vendor-prefixed and regular ::selection selectors cannot be combined:
 * https://stackoverflow.com/a/16982510/7133471
 *
 * Customize the background color to match your design.
 */

::-moz-selection {
    background: #bec4c4;
    text-shadow: none;
}

::selection {
    background: #bec4c4;
    text-shadow: none;
}

/*
 * A better looking default horizontal rule
 */

hr {
    display: block;
    height: 1px;
    border: 0;
    border-top: 1px solid #ccc;
    margin: 1em 0;
    padding: 0;
}

/*
 * Remove the gap between audio, canvas, iframes,
 * images, videos and the bottom of their containers:
 * https://github.com/h5bp/html5-boilerplate/issues/440
 */

audio,
canvas,
iframe,
img,
svg,
video {
    vertical-align: middle;
}

/*
 * Remove default fieldset styles.
 */

fieldset {
    border: 0;
    margin: 0;
    padding: 0;
}

/*
 * Allow only vertical resizing of textareas.
 */

textarea {
    resize: none;
    width: 80%;
    border: 2px;
    border-color: #d3d3d3;
    padding: 12px;
}

/* ==========================================================================
   Browser Upgrade Prompt
   ========================================================================== */

.browserupgrade {
    margin: 0.2em 0;
    background: #ccc;
    color: #000;
    padding: 0.2em 0;
}

/* ==========================================================================
   Author's custom styles
   ========================================================================== */
html, body {
  max-width: 100%;
  overflow-x: hidden;
  min-width: 100%;
}

h1 {
  font-size: 23px;
  font-family: "Catamaran", sans-serif;
  color: #f2f2f2;
}

.landing h {
  font-size: 200px;
  color: #f2f2f2;
  font-family: "Catamaran", sans-serif;
  font-weight: 100;
  letter-spacing: 4px;
}





.topnav {
  overflow: hidden;
  width: 100%;
  height: 60px;
  background-color: #232323;
}

.topnav a {
  float: right;
  color: #9e9e9e;
  display: block;
  text-align: center;
  padding: 23px 12px;
  font-family: "Futura", sans-serif;
  font-size: 18px;
  text-decoration: none;
  margin-right: 2%;
}

.topnav a:hover {
  color: #f2f2f2;
}

#logo {
  width: 40px;
  height: 70px;
  float: left;
  padding: 0px;
}


.landing {
  position: relative;
  background-color: #232323;
}

.landing_header{
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate( -50%, -50% );
  text-align: center;
  font-size: 200px;
  color: #f2f2f2;
  font-family: "Catamaran", sans-serif;
  font-weight: 100;
  letter-spacing: 3px;
}

.quote {
  background-color: #232323; 
  display: inline-block;
  width: 100%;
}

.quote p {
  font-family: "Futura", sans-serif;
  font-size: 40px;
  letter-spacing: 1.7px;
  line-height: 1.5;
  color: #f2f2f2;
  position: relative;
  left: 10px;
  top: 10px;
  margin-top: 5%;
  margin-bottom: 5%;
  margin-left: 5%;
  margin-right: 5%;
}

.flexbox {
  display: flex;
}

.left {
  flex: 0 0 40%;
  background-color: #f2f2f2;
}

.left h1 {
  display: inline-block;
  font-family: "Futura", sans-serif;
  font-size: 40px;
  font-weight: 200;
  color: #474747;
  position: relative;
  margin-left: 10%;
  margin-right: 10%;
}

.left h {
  display: inline-block;
  font-family: "Cantarell", sans-serif;
  font-size: 14px;
  letter-spacing: 2.3px;
  color: #232323;
  margin-left: 10%;
  margin-right: 10%;
  margin-bottom: 10%;
}

.left h2 {
  display: block;
  font-family: "Cantarell", sans-serif;
  font-size: 24px;
  letter-spacing: 2.3px;
  color: #474747;
  margin-left: 10%;
  margin-right: 10%;
  margin-bottom: 25%;
}

.left p {
  display: block;
  font-family: "Cantarell", sans-serif;
  font-size: 14px;
  letter-spacing: 2.3px;
  color: #9e9e9e;
  margin-left: 10%;
  margin-right: 10%;
  margin-bottom: 25%;
}

.right {
  flex: 1;
  margin-left: 0px;
  background-color: #f2f2f2;
}

.right p {
  font-family: "Didact Gothic", sans-serif;
  font-size: 22px;
  letter-spacing: 1.7px;
  line-height: 1.6em;
  font-weight: 100;
  margin-right: 5%;
  margin-top: 56px;
}

.quote2 {
  display: inline-block;
  background-color: #232323;
  width: 100%;
}

.quote2 h {
  font-family: "Catamaran", sans-serif;
  color: #f2f2f2;
}

.flexbox_footer {
  display: flex;
  flex-direction: column;
}

.footer {
  flex: 1;
  background-color: #232323;
  width: 100%;
  height: auto;
}

.footer p_i {
  font-family: "Cantarell", sans-serif;
  font-size: 12px;
  color: #9e9e9e;
  letter-spacing: 2.3px;
  text-align: center;
  margin-top: 50px;
  display: inline-block;
  text-align: center;
  margin-left: 20%;
  margin-right: 20%;
}

.footer p {
  font-family: "Cantarell", sans-serif;
  font-size: 12px;
  color: #9e9e9e;
  letter-spacing: 2.3px;
  text-align: center;
  margin-top: 70px;
}

.footer p2 {
  font-family: "Cantarell", sans-serif;
  font-size: 12px;
  color: #9e9e9e;
  letter-spacing: 2.3px;
  text-align: center;
  display: inline-block;
  margin-left: 20%;
  margin-right: 20%;
  margin-bottom: 70px;
}

.bottomnav {
  background-color: #232323;
  width: 100%;
  height: 123px;
  Text-align: center;
}

.bottomnav a {
  display: inline-block;
  font-family: "Cantarell", sans-serif;
  font-size: 12px;
  letter-spacing: 2.3px;
  text-decoration: none;
  color: #9e9e9e;
  margin-top: 7%;
  margin-left: auto;
  margin-right: auto;
  padding: 12px 16px;
}

.bottomnav a:hover {
  color: #f2f2f2;
}

.blog h {
  display: inline-block;
  font-family: "Futura", sans-serif;
  font-size: 24px;
  letter-spacing: 2.3px;
  color: #9e9e9e;
  margin-left: 10%;
  margin-right: 10%;
  margin-bottom: 25%;
}
/*
==========================================================================
   Helper classes
   ========================================================================== */

/*
 * Hide visually and from screen readers
 */

.hidden {
    display: none !important;
}

/*
 * Hide only visually, but have it available for screen readers:
 * https://snook.ca/archives/html_and_css/hiding-content-for-accessibility
 *
 * 1. For long content, line feeds are not interpreted as spaces and small width
 *    causes content to wrap 1 word per line:
 *    https://medium.com/@jessebeach/beware-smushed-off-screen-accessible-text-5952a4c2cbfe
 */

.visuallyhidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute;
    width: 1px;
    white-space: nowrap; /* 1 */
}

/*
 * Extends the .visuallyhidden class to allow the element
 * to be focusable when navigated to via the keyboard:
 * https://www.drupal.org/node/897638
 */

.visuallyhidden.focusable:active,
.visuallyhidden.focusable:focus {
    clip: auto;
    height: auto;
    margin: 0;
    overflow: visible;
    position: static;
    width: auto;
    white-space: inherit;
}

/*
 * Hide visually and from screen readers, but maintain layout
 */

.invisible {
    visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

.clearfix:before,
.clearfix:after {
    content: " "; /* 1 */
    display: table; /* 2 */
}

.clearfix:after {
    clear: both;
}

/* ==========================================================================
   EXAMPLE Media Queries for Responsive Design.
   These examples override the primary ('mobile first') styles.
   Modify as content requires.
   ========================================================================== */

@media only screen and (min-width: 35em) {
    /* Style adjustments for viewports that meet the condition */
}

@media print,
       (-webkit-min-device-pixel-ratio: 1.25),
       (min-resolution: 1.25dppx),
       (min-resolution: 120dpi) {
    /* Style adjustments for high resolution devices */
}

/* ==========================================================================
   Print styles.
   Inlined to avoid the additional HTTP request:
   https://www.phpied.com/delay-loading-your-print-css/
   ========================================================================== */

@media print {
    *,
    *:before,
    *:after {
        background: transparent !important;
        color: #000 !important; /* Black prints faster */
        -webkit-box-shadow: none !important;
        box-shadow: none !important;
        text-shadow: none !important;
    }

    a,
    a:visited {
        text-decoration: underline;
    }

    a[href]:after {
        content: " (" attr(href) ")";
    }

    abbr[title]:after {
        content: " (" attr(title) ")";
    }

    /*
     * Don't show links that are fragment identifiers,
     * or use the `javascript:` pseudo protocol
     */

    a[href^="#"]:after,
    a[href^="javascript:"]:after {
        content: "";
    }

    pre {
        white-space: pre-wrap !important;
    }
    pre,
    blockquote {
        border: 1px solid #999;
        page-break-inside: avoid;
    }

    /*
     * Printing Tables:
     * http://css-discuss.incutio.com/wiki/Printing_Tables
     */

    thead {
        display: table-header-group;
    }

    tr,
    img {
        page-break-inside: avoid;
    }

    p,
    h2,
    h3 {
        orphans: 3;
        widows: 3;
    }

    h2,
    h3 {
        page-break-after: avoid;
    }
}

